@@ -28,7 +28,7 @@
       <screenshot>resources/screenshot-09.png</screenshot>
       <screenshot>resources/screenshot-10.png</screenshot>
     </assets>
-    <news>[B]1.3.4[/B][CR]- Add "Movie set information" label to video information dialog[CR]- Bugfix video codec flagging</news>
+    <news>[B]1.3.4[/B][CR]- Add "Movie set information" label to video information dialog[CR]- Bugfix video codec flagging[CR]- Add spin controls to Favourites and File Browser dialogs</news>
     <description lang="en_GB">TetradUI is a skin add-on for Kodi media center. The aim with TetradUI is to create a fresh modern homage of the classic blades-style UI found in the original Xbox360 dashboard. Also seen in the works of Team Blackbolt and Jezz_X with projects MC360 and JX720 respectively. TetradUI is based on JX720 by Jezz_X.[CR]This add-on was created by Jezz_X and TeamUI.</description>
     <summary lang="en_GB">TetradUI is a skin add-on for Kodi media center</summary>
   </extension>
