@@ -37,8 +37,9 @@
 					<height>360</height>
 					<onup>450</onup>
 					<onleft>Dialog.Close(Favourites)</onleft>
-					<onright>450</onright>
-					<ondown>450</ondown>
+					<onright>60</onright>
+					<ondown>60</ondown>
+					<pagecontrol>60</pagecontrol>
 					<scrolltime>200</scrolltime>
 					<itemlayout height="45">
 						<control type="image">
@@ -78,18 +79,23 @@
 						</control>
 					</focusedlayout>
 				</control>
-				<control type="label">
-					<description>Page label</description>
-					<left>170</left>
-					<top>670</top>
-					<width>350</width>
-					<height>30</height>
-					<align>right</align>
-					<aligny>center</aligny>
-					<font>font12</font>
-					<textcolor>grey2</textcolor>
-					<label>$INFO[Container(450).NumItems] $LOCALIZE[31200] - $LOCALIZE[31201] $INFO[Container(450).CurrentPage]/$INFO[Container(450).NumPages]</label>
+				<control type="spincontrol" id="60">
+					<description>Next page Spinner</description>
+					<left>470</left>
+					<top>668</top>
+					<subtype>page</subtype>
+					<font />
+					<onleft>450</onleft>
+					<onup>450</onup>
+					<showonepage>true</showonepage>
 				</control>
+				<include content="PageLabel">
+					<param name="left" value="110" />
+					<param name="top" value="668" />
+					<param name="width" value="350" />
+					<param name="label" value="$INFO[Container(450).NumItems] $LOCALIZE[31200] - $LOCALIZE[31201] $INFO[Container(450).CurrentPage]/$INFO[Container(450).NumPages]" />
+					<param name="id" value="60" />
+				</include>
 			</control>
 		</control>
 	</controls>
