@@ -212,22 +212,15 @@
 			<onright>150</onright>
 			<ondown>160</ondown>
 			<onup>120</onup>
-			<textcolor>white</textcolor>
 			<showonepage>true</showonepage>
 		</control>
-		<control type="label">
-			<description>number of files/pages in list text label</description>
-			<left>503</left>
-			<top>462</top>
-			<width>320</width>
-			<height>35</height>
-			<font>font12</font>
-			<align>right</align>
-			<aligny>center</aligny>
-			<scroll>true</scroll>
-			<textcolor>white</textcolor>
-			<label>$LOCALIZE[31201] $INFO[Container(120).CurrentPage]/$INFO[Container(120).NumPages]</label>
-		</control>
+		<include content="PageLabel">
+			<param name="left" value="503" />
+			<param name="top" value="462" />
+			<param name="width" value="320" />
+			<param name="label" value="$LOCALIZE[31201] $INFO[Container(120).CurrentPage]/$INFO[Container(120).NumPages]" />
+			<param name="id" value="62" />
+		</include>
 		<control type="image">
 			<left>50</left>
 			<top>500</top>
