@@ -92,6 +92,7 @@
 				<ondown>5</ondown>
 				<onup>5</onup>
 				<textcolor>grey2</textcolor>
+				<focusedcolor>orange</focusedcolor>
 				<showonepage>false</showonepage>
 				<animation effect="slide" start="0,0" end="-100,0" time="200" condition="Player.HasAudio">Conditional</animation>
 				<animation effect="slide" start="0,0" end="-100,0" time="200" condition="Player.HasVideo + VideoPlayer.Content(Movies)">Conditional</animation>
