@@ -1,6 +1,7 @@
 [B]Version 1.3.4[/B]
 - Add "Movie set information" label to video information dialog
 - Bugfix video codec flagging
+- Add spin controls to Favourites and File Browser dialogs
 
 [B]Version 1.3.3[/B]
 - Startup animation also works when using splash screen
